--- a/APP/src/main/resources/application.properties
+++ b/APP/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/nbp_2020
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
