--- a/APP/pom.xml
+++ b/APP/pom.xml
@@ -61,6 +61,11 @@
             <version>2.3.1.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.14</version>
+        </dependency>
     </dependencies>
 
     <build>
