--- a/APP/src/main/resources/application.properties
+++ b/APP/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/nbp_2020_p13
-spring.datasource.username=u161048
-spring.datasource.password=p161048
+spring.datasource.url=jdbc:postgresql://localhost:5433/nbp_2020
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
